Wed May 09 00:08:29 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_cursor.h: Whitespace tweaks.

Tue May 08 23:51:01 GMT 2012  Olly Betts <olly@survex.com>

	* docs/admin_notes.rst: Document xapian-check for fixing corrupted
	  databases.

Tue May 08 11:30:06 GMT 2012  Olly Betts <olly@survex.com>

	* common/fileutils.cc: Add safeunistd.h for mkdir, required by GCC
	  4.7 (reported by Gaurav Arora).

Wed May 02 03:44:25 GMT 2012  Olly Betts <olly@survex.com>

	* weight/weightinternal.cc: Using AssertEq() on NULL doesn't compile,
	  at least with recent GCC.

Wed May 02 02:58:37 GMT 2012  Olly Betts <olly@survex.com>

	* common/omassert.cc: Fix warning with GCC in build with assertions
	  enabled.

Wed May 02 02:55:54 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: We're now using automake 1.12 to generate snapshots and
	  releases.

Mon Apr 23 13:16:36 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Fix tradweight1 to test that TradWeight(0)
	  means that wdf and doc length don't affect the weight of a term.

Mon Apr 23 03:44:02 GMT 2012  Olly Betts <olly@survex.com>

	* backends/chert/,backends/dbcheck.cc,bin/xapian-check.cc,
	  include/xapian/database.h: Add "fix" option to xapian-check, which
	  currently will regenerate iamchert if it isn't valid, and will
	  regenerate base files from the .DB files (only really tested on
	  databases which have just been compacted).

Mon Apr 23 03:40:35 GMT 2012  Olly Betts <olly@survex.com>

	* common/filetests.h: Add new function file_size() to get the size
	  of a file from a path or file descriptor.
	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc,
	  net/remoteconnection.cc,tests/api_replicate.cc: Use this new
	  function.

Wed Apr 18 01:35:21 GMT 2012  Olly Betts <olly@survex.com>

	* weight/bm25weight.cc,weight/tradweight.cc: Fix comment typo.

Wed Apr 11 08:26:42 GMT 2012  Olly Betts <olly@survex.com>
